Accessibility feature: focus color for config buttons now change color just like if you hover over them

--- a/nemesis.html
+++ b/nemesis.html
@@ -34,19 +34,19 @@
                     <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.png" width="100%" alt="nemesis black">
                 </section>
                 <section class="models_text-box">
-                  <p class="models_text-box-p">It breathes in the beating rain into it's openings like a speeding swordfish. It yearns for speed, and it calls to all car enthusiasts. The Nemesis is a performance monster. Pure power. Incredible agility.</p>
+                  <p class="models_text-box-p">It breathes in the beating rain into its openings like a speeding swordfish. It yearns for speed, and it calls to all car enthusiasts. The Nemesis is a performance monster. Pure power. Incredible agility.</p>
                 </section> 
                 <section>
                     <img src="/trion_homepage_images/Nemesis_blk_corrug-1024x633.png" width="100%" alt="nemesis black">
                 </section>
                 <section class="models_text-box">
-                    <p class="models_text-box-p">The Nemesis goes beyond other supercars. It is an electric powerhouse, with power that allows it ot accellerate in a split-second. You'll miss it if you blink twice.</p>
+                    <p class="models_text-box-p">The Nemesis goes beyond other supercars. It is an electric powerhouse, with power that allows it to accellerate in a split-second. You'll miss it if you blink twice.</p>
                 </section>
             </article>
             <article>
                 <section class="models_text-box2">
                   <p>A world of power is at your fingertips. Get in touch with a Trion dealer today. You can <a href="config-nemesis.html">configure your Nemesis</a> via this link.
-                  </p>
+                  </p>        
                 </section>
               </article>
 
