I'm done with this

--- a/checkout.html
+++ b/checkout.html
@@ -20,9 +20,9 @@
             <li><a href="models.html">Models</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="merch.html">Merch</a></li>
-            <li><a href="account.html">Account</a></li>
+            <li><a href="account_home.html">Account</a></li>
             <li><a href="models-configurator.html">Configurator</a></li>
-            <li><a href="shopping_Shopping Cart.html">Shopping Cart</a></li>
+            <li><a href="shopping_cart.html">Shopping Cart</a></li>
           </ul>
         </li>
       </ul>
