--- a/interior-nemesis.html
+++ b/interior-nemesis.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="flex.css">
     <title>nemesis-regular-interior</title>
 </head>
-<nav role="navigation">
+<header>
+  <nav role="navigation">
     <ul>
       <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
       <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
@@ -15,13 +16,14 @@
           <li><a href="models.html">Models</a></li>
           <li><a href="about-us.html">About Us</a></li>
           <li><a href="merch.html">Merch</a></li>
-          <li><a href="account.html">Account</a></li>
+          <li><a href="account_home.html">Account</a></li>
           <li><a href="models-configurator.html">Configurator</a></li>
-          <li><a href="shopping_Shopping Cart.html">Shopping Shopping Cart</a></li>
+          <li><a href="shopping_cart.html">Shopping Cart</a></li>
         </ul>
       </li>
     </ul>
   </nav>
+</header>
 <body>
     <article class="config_option-controller">
         <img class="image_config_controller" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" width="100%" alt="config">
