--- a/nem_hubcap1.html
+++ b/nem_hubcap1.html
@@ -7,24 +7,24 @@
     <title>nemesis_hubcap1</title>
 </head>
 <body class="background_for_config">
-    <header>
-        <nav role="navigation">
-            <ul>
-              <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-              <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="models.html">Models</a></li>
-                  <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="merch.html">Merch</a></li>
-                  <li><a href="account.html">Account</a></li>
-                  <li><a href="models-configurator.html">Configurator</a></li>
-                  <li><a href="shopping_Shopping Cart.html">Shopping Shopping Cart</a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-    </header>
+  <header>
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+        <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="models.html">Models</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="merch.html">Merch</a></li>
+            <li><a href="account_home.html">Account</a></li>
+            <li><a href="models-configurator.html">Configurator</a></li>
+            <li><a href="shopping_cart.html">Shopping Cart</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header>
     <article class="config_option-controller">
         <img class="hubcap-image-flexstart" src="/trion_homepage_images/nemesis_hubcap1.jpg" width="100%" alt="config">
         <div class="config_options">
