--- a/account_config_history.html
+++ b/account_config_history.html
@@ -4,60 +4,158 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="flex.css">
-  <title>black-widow_spoiler1</title>
+  <title>Trion Super Car - Account</title>
 </head>
 <body>
-    <header>
-      <nav role="navigation">
-        <ul>
-          <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-          <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="models.html">Models</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="merch.html">Merch</a></li>
-              <li><a href="account.html">Account</a></li>
-              <li><a href="models-configurator.html">Configurator</a></li>
-              <li><a href="shopping_cart.html">Cart</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
-            <article class="text-container-apply-confirm">
-              <h1>YOU DO NOT HAVE ANY SAVED CONFIGURATIONS</h1>
-              <a href="models-configurator.html">BACK TO CONFIGURATOR</a>
-            </article>
-            <style>
-              footer{
-                 margin-top: auto;
-              }
-        
-              body{
-                  min-height: 100vh;
-                  display: grid;
-                  grid-template-rows: 1fr auto;
-              }
-          </style>
-          <footer>
-              <section class="footer-title">
-                <p>TRION</p>
-              </section>
-              <section class="footer_content">
-                <p>CONTACT</p>
-                <p>INSERT EMAIL HERE:</p>
-                <p>________________________</p>
-                <p>Call us: #(123)456-7890</p>
-              </section>
-               <section class="footer_buttons">     
-                <a href="models.html">MODELS</a>
-                <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
-                <a href="account.html">ACCOUNT</a>                               
-                <a href="models-configurator.html">CONFIGURATOR</a>
-          </footer>
-            <article class="footer_extra">
-              <p>Created by Lukas and Jack; November 2024</p>
-            </article>
+  <header>
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+        <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="models.html">Models</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="merch.html">Merch</a></li>
+            <li><a href="account_home.html">Account</a></li>
+            <li><a href="models-configurator.html">Configurator</a></li>
+            <li><a href="shopping_cart.html">Shopping Cart</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Account Page Content -->
+  <section class="account-info">
+    <h1>Welcome, John Doe!</h1>
+    <p>Your Trion Super Car account is ready to go.</p>
+
+    <div class="account-details">
+      <div class="account-detail">
+        <h3>Account ID</h3>
+        <p>#123456789</p>
+      </div>
+      <div class="account-detail">
+        <h3>Email</h3>
+        <p>johndoe@email.com</p>
+      </div>
+      <div class="account-detail">
+        <h3>Membership Level</h3>
+        <p>Trion Premium Member</p>
+      </div>
+    </div>
+
+    <div class="account-actions">
+      <h2>Account Management</h2>
+      <a href="models-configurator.html" class="cta-button">Go to Configurator</a>
+      <a href="saved-configurations.html" class="cta-button">View Saved Configurations</a>
+      <a href="edit-account.html" class="cta-button">Edit Account Settings</a>
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <section class="footer-title">
+      <p>TRION</p>
+    </section>
+    <section class="footer_content">
+      <p>CONTACT</p>
+      <p>INSERT EMAIL HERE:</p>
+      <p>________________________</p>
+      <p>Call us: #(123)456-7890</p>
+    </section>
+     <section class="footer_buttons">     
+      <a href="models.html">MODELS</a>
+      <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+      <a href="account.html">ACCOUNT</a>                               
+      <a href="models-configurator.html">CONFIGURATOR</a>
+  </footer>
+  <article class="footer_extra">
+    <p>Created by Lukas and Jack; November 2024</p>
+  </article>
+
+  <article class="footer-extra">
+    <p>Created by Lukas and Jack; November 2024</p>
+  </article>
+
+  <style>
+    .home_button {
+      width: 55px;
+    }
+
+    .hamburger-link img {
+      width: 60px;
+    }
+
+    /* Account Page */
+    .account-info {
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    .account-info h1 {
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+
+    .account-info p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    .account-details {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin-bottom: 40px;
+    }
+
+    .account-detail {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 30%;
+    }
+
+    .account-detail h3 {
+      font-size: 18px;
+      margin-bottom: 10px;
+      color: #555;
+    }
+
+    .account-detail p {
+      font-size: 16px;
+      color: #777;
+    }
+
+    .account-actions {
+      margin-top: 40px;
+    }
+
+    .account-actions h2 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    .cta-button {
+      background-color: #f39c12;
+      color: #fff;
+      padding: 12px 25px;
+      text-decoration: none;
+      border-radius: 5px;
+      margin: 10px;
+      font-size: 16px;
+      display: inline-block;
+    }
+
+    .cta-button:hover {
+      background-color: #e67e22;
+    }
+
+  </style>
+
+
 </body>
 </html>
