--- a/about-us.html
+++ b/about-us.html
@@ -25,15 +25,18 @@
         </ul>
       </nav>
     </header>
-    
+  
+    <article>
+    <section>
     <h1>
       <p style="color: white;">What Sets Us Apart  </p>
     </h1>
 
-    <p style="color: white;">Trion Supercars apart is its cutting-edge approach to blending extreme performance with advanced technology and luxury. Trion pushes the limits of innovation by offering electric and hybrid powertrains that deliver impressive speed and acceleration, rivaling traditional supercars. The brand also leads the way in automotive design, with futuristic features like a fully digital cockpit and wireless charging.</p>
+    <p style="color: white; margin-top: 1rem;">Trion Supercars apart is its cutting-edge approach to blending extreme performance with advanced technology and luxury. Trion pushes the limits of innovation by offering electric and hybrid powertrains that deliver impressive speed and acceleration, rivaling traditional supercars. The brand also leads the way in automotive design, with futuristic features like a fully digital cockpit and wireless charging.</p>
     
-    <p style="color: white;">In addition to performance, Trion is committed to sustainability, using eco-friendly materials without compromising on quality. The combination of power, high-tech connectivity, and a personalized driving experience sets Trion apart, positioning it as a standout in the competitive supercar market.</p>
+    <p style="color: white; margin-top: 1rem;">In addition to performance, Trion is committed to sustainability, using eco-friendly materials without compromising on quality. The combination of power, high-tech connectivity, and a personalized driving experience sets Trion apart, positioning it as a standout in the competitive supercar market.</p>
     <img src="trion_homepage_images/Trion_logo.png" width="55rem" alt="aeradsf">
+    </section>
 
     <section>
       <img src="trion_homepage_images/Richard Patterson CEO of TRION.png">
@@ -45,6 +48,7 @@
 
     <p style="color: white;">With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
     </section>
+    </article>
 
     <article>
       <h2>Accelerate into the future with Trion's Electric Power</h2>
