more work on responsive design

--- a/checkout.html
+++ b/checkout.html
@@ -201,7 +201,7 @@
             <label>
               <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
             </label>
-            <input type="submit" value="Continue to checkout" class="btn">
+            <a href="checkout-confirmation.html" style="display: flex; justify-content: center;" type="submit" value="Complete transaction" class="btn">Complete transaction</a>
             
           </form>
         </div>
