--- a/merch.html
+++ b/merch.html
@@ -36,7 +36,7 @@
   
   <section id="merch-header">
     <h1>Merch</h1>
-    <img src="merch image/shopping_Cart-removebg-preview.png" width="45rem">
+    <a href="/shopping_cart.html"><img src="merch image/shopping_Cart-removebg-preview.png" width="45rem" alt="shopping_cart"></a>
   </section>
 
   <section class="merch-item">
