--- a/about-us.html
+++ b/about-us.html
@@ -7,27 +7,6 @@
     <title>About Us</title>
 </head>
 <body>
-    <header>
-      <nav role="navigation">
-        <ul>
-          <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-          <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="models.html">Models</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="merch.html">Merch</a></li>
-              <li><a href="account.html">Account</a></li>
-              <li><a href="models-configurator.html">Configurator</a></li>
-              <li><a href="shopping_Shopping Cart.html">Shopping Cart</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
-  
-    <article>
-    <section>
   <header>
     <nav role="navigation">
       <ul>
@@ -46,6 +25,9 @@
       </ul>
     </nav>
   </header>
+  
+    <article>
+    <section>
     
 
     <h1>
@@ -55,11 +37,10 @@
     <p style="color: white; margin-top: 1rem;">Trion Supercars apart is its cutting-edge approach to blending extreme performance with advanced technology and luxury. Trion pushes the limits of innovation by offering electric and hybrid powertrains that deliver impressive speed and acceleration, rivaling traditional supercars. The brand also leads the way in automotive design, with futuristic features like a fully digital cockpit and wireless charging.</p>
     
     <p style="color: white; margin-top: 1rem;">In addition to performance, Trion is committed to sustainability, using eco-friendly materials without compromising on quality. The combination of power, high-tech connectivity, and a personalized driving experience sets Trion apart, positioning it as a standout in the competitive supercar market.</p>
-    <img src="trion_homepage_images/Trion_logo.png" width="55rem" alt="aeradsf">
     </section>
 
     <section>
-      <img src="trion_homepage_images/Richard Patterson CEO of TRION.png">
+      <img src="trion_homepage_images/Richard Patterson CEO of TRION.png" width="100%" alt="patterson">
     <h1 style="color:white;">Richard Patterson</h1>
 
     <p style="color: white;">Richard Patterson (Rich), CEO & CTO of Trion Supercars, realized a lifelong dream in May 2012 after 40 years in the automotive industry by founding Trion with a core team of experts.</p>
@@ -72,59 +53,59 @@
 
     <article>
       <h2>Accelerate into the future with Trion's Electric Power</h2>
-      <img src="trion_homepage_images/trion chief operating officer.png">
+      <img class="about-us_image" src="trion_homepage_images/trion chief operating officer.png" alt="staff">
       <p>Brent Johnson</p>
       <p>Chief Operating Officer</p>
     </article>
   
     <article>
-      <img src="trion_homepage_images/Nancy Patterson.png">
+      <img class="about-us_image" src="trion_homepage_images/Nancy Patterson.png" alt="staff">
       <p>Nancy Patterson</p>
       <p>CEA - Chief Executive Assistant</p>
     </article>
 
     <article>
-      <img src="trion_homepage_images/quinton dodson vp of special vehicle operation.png">
+      <img class="about-us_image" src="trion_homepage_images/quinton dodson vp of special vehicle operation.png" alt="staff">
       <p>Quinton Dodson</p>
       <p>VP of Special Vehicle Operations</p>
     </article>
 
     <article>
-      <img src="trion_homepage_images/kie fair trion ppl.png">
+      <img class="about-us_image" src="trion_homepage_images/kie fair trion ppl.png" alt="staff">
       <p>Kie Fair</p>
       <p>VP of Sales / Dealer Coordination</p>
     </article>
 
     <article>
-      <img src="trion_homepage_images/romeo miller.png">
+      <img class="about-us_image" src="trion_homepage_images/romeo miller.png" alt="staff">
       <p>Romeo Miller</p>
       <p>Chief Brand Ambassador</p>
     </article>
 
     <article>
-      <img src="trion_homepage_images/warren hollier.png">
+      <img class="about-us_image" src="trion_homepage_images/warren hollier.png" alt="staff">
       <p>Warren Hollier</p>
       <p>Director of Special Programs</p>
     </article>
 
     <article>
-      <img src="trion_homepage_images/peter dwars.png">
+      <img class="about-us_image" src="trion_homepage_images/peter dwars.png" alt="staff">
       <p>Peter Dwars</p>
       <p>CCO, Compliance Officer</p>
     </article>
 
     <article>
-      <img src="trion_homepage_images/demarcus nelson.png">
+      <img class="about-us_image" src="trion_homepage_images/demarcus nelson.png" alt="staff">
       <p>DeMarcus Nelson</p>
       <p>VP of Business Development</p>
     </article>
 
 
     <footer>
-      <section class="footer-title">
+      <section class="footer-title" alt="staff">
         <p>TRION</p>
       </section>
-      <section class="footer_content">
+      <section class="footer_content" alt="staff">
         <p>CONTACT</p>
         <p>INSERT EMAIL HERE:</p>
         <p>________________________</p>
