--- a/nem_hubcap6.html
+++ b/nem_hubcap6.html
@@ -26,7 +26,7 @@
     </nav>
   </header>
     <article class="config_option-controller">
-        <img class="hubcap-image-flexstart" src="/trion_homepage_images/nemesis_hubcap6.jpg" width="100%" alt="config">
+      <img class="hubcap-image" class="hubcap-image-flexstart" src="/trion_homepage_images/nemesis_hubcap6.jpg" alt="config">
         <div class="config_options">
             <a href="nem_hubcap1.html">OPTION 1</a>
             <a href="nem_hubcap2.html">OPTION 2</a>        
@@ -54,7 +54,7 @@
          <section class="footer_buttons">     
           <a href="models.html">MODELS</a>
           <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
-          <a href="account.html">ACCOUNT</a>                               
+          <a href="account_home.html">ACCOUNT</a>                                                             
           <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
     <article class="footer_extra">
