--- a/order_confirmed.html
+++ b/order_confirmed.html
@@ -26,23 +26,24 @@
   </header>
 
     <footer>
-      <section class="footer-title">
-        <p>TRION</p>
-      </section>
-      <section class="footer_content">
-        <p>CONTACT</p>
-        <p>INSERT EMAIL HERE:</p>
-        <p>________________________</p>
-        <p>Call us: #(123)456-7890</p>
-      </section>
-      <article class="footer_buttons">
-        <a href="#">ACCESSIBILITY</a>
-        <a href="#">MODELS</a>
-        <a href="#">MERCH</a>
-        <a href="#">ABOUT US</a>
-      </article></footer>
-  <article class="footer_extra">
+        <section class="footer-title">
+          <p>TRION</p>
+        </section>
+        <section class="footer_content">
+          <p>CONTACT</p>
+          <p>INSERT EMAIL HERE:</p>
+          <p>________________________</p>
+          <p>Call us: #(123)456-7890</p>
+        </section>
+         <section class="footer_buttons">     
+          <a href="models.html">MODELS</a>
+          <a href="about-us.html">ABOUT US</a> 
+          <a href="merch.html">MERCH </a>
+          <a href="account_home.html">ACCOUNT</a>                                                             
+          <a href="models-configurator.html">CONFIGURATOR</a>
+    </footer>
+    <article class="footer_extra">
       <p>Created by Lukas and Jack; November 2024</p>
-  </article>
+    </article>
 </body>
 </html>
