--- a/about-us.html
+++ b/about-us.html
@@ -114,7 +114,7 @@
       <article class="footer_buttons">
         <a href="models.html">MODELS</a>
     <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
-    <a href="account.html">ACCOUNT</a>                               
+    <a href="account_home.html">ACCOUNT</a>                               
     <a href="models-configurator.html">CONFIGURATOR</a>
       </section>
   </footer>
