--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <a href="models.html">MODELS</a>
           <a href="about-us.html">ABOUT US</a> 
           <a href="merch.html">MERCH </a>
-          <a href="account.html">ACCOUNT</a>                               
+          <a href="account_home.html">ACCOUNT</a>                                                             
           <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
     <article class="footer_extra">
