update on responsive design

--- a/account-virtual_concierge.html
+++ b/account-virtual_concierge.html
@@ -49,9 +49,12 @@
         <section class="center-h1">
             <h1>Got a question? Ask your virtual Concierge!</h1>
         </section>
-        <section>
+        <section class="concierge-response">
           <input type="text" id="fname" name="firstname" placeholder="Ex: Where is the nearest Trion dealer?">
         </section>
+          <section style="display: flex; justify-self: center;" class="footer_buttons">
+            <a href="checkout.html" style="color: white; text-align: center; width: 100%; font-size: x-large;">Submit responce</a>
+          </section>
         <article> 
 
           
