--- a/checkout.html
+++ b/checkout.html
@@ -220,6 +220,17 @@
     </div>
 
 
+    <style>
+      footer{
+         margin-top: auto;
+      }
+
+      body{
+          min-height: 100vh;
+          display: grid;
+          grid-template-rows: 1fr auto;
+      }
+  </style>
     <footer>
       <section class="footer-title">
         <p>TRION</p>
