--- a/account_home.html
+++ b/account_home.html
@@ -102,7 +102,7 @@
           font-size: 16px;
           transition: background-color 0.3s;
       }
-      
+
       .model-card button:hover {
           background-color: #e67e22;
       }
@@ -146,23 +146,20 @@
                 </div>
             </section>
             <section class="car-models">
-              <h2>Our Exclusive Models</h2>
+              <h2>Account Settings</h2>
               <div class="models-gallery">
                   <div class="model-card">
-                      <img src="supercar1.jpg" alt="Trion Model 1">
-                      <h3>Trion Hyperion</h3>
+                      <h3>Account Settings</h3>
                       <p>The next-gen supercar with extreme performance and sleek design.</p>
                       <button>View Details</button>
                   </div>
                   <div class="model-card">
-                      <img src="supercar2.jpg" alt="Trion Model 2">
-                      <h3>Trion Nemesis</h3>
+                      <h3>Account Purchase</h3>
                       <p>Designed for the track, but ready for the streets.</p>
                       <button>View Details</button>
                   </div>
                   <div class="model-card">
-                      <img src="supercar3.jpg" alt="Trion Model 3">
-                      <h3>Black Widow</h3>
+                      <h3>Account Vitrual Concierge</h3>
                       <p>Built for the bold, this car delivers unmatched power.</p>
                       <button>View Details</button>
                   </div>
