--- a/account_config_history.html
+++ b/account_config_history.html
@@ -10,7 +10,7 @@
   <header>
     <nav role="navigation">
       <ul>
-        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="70rem" alt="aeradsf"></a></li>       
         <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -49,7 +49,7 @@
     <div class="account-actions">
       <h2>Account Management</h2>
       <a href="models-configurator.html" class="cta-button">Go to Configurator</a>
-      <a href="saved-configurations.html" class="cta-button">View Saved Configurations</a>
+      <a href="ahis.html" class="cta-button">View Saved Configurations</a>
       <a href="edit-account.html" class="cta-button">Edit Account Settings</a>
     </div>
   </section>
