--- a/nemesis.html
+++ b/nemesis.html
@@ -10,8 +10,7 @@
   <header>
     <nav role="navigation">
       <ul>
-        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-        <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>        <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="models.html">Models</a></li>
