responsive layout: headlight and break calipers/ confirmation pages

--- a/nem_headlight-caliper1.html
+++ b/nem_headlight-caliper1.html
@@ -25,7 +25,7 @@
     </nav>
   </header>
     <article class="config_option-controller">
-        <img class="hubcap-image-flexstart" src="/trion_homepage_images/config_caliper_light_blue.jpg" width="80%" alt="config">
+        <img class="hubcap-image" src="/trion_homepage_images/config_caliper_light_blue.jpg" alt="config">
         <div class="config_options-special3">
             <a href="nem_headlight-caliper1.html">BLUE VARIANT</a>
             <a href="nem_headlight-caliper2.html">RED VARIANT</a>        
