Updated merch responsiveness; updated merch descriptions

--- a/merch.html
+++ b/merch.html
@@ -44,7 +44,7 @@
     <!-- </div> -->
     <div class="merch-description">
       <h3>Hoodies.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
+      <p>In our wide, colorful array of hoodies, there is an option for everyone.</p>
       <a href="hoodies.html" style="color: black;">Explore</a>
     </div>
   </section>
@@ -53,7 +53,7 @@
     <img src="merch image/Shoes_trion_merch.png" class="merch-image">
     <div class="merch-description">
       <h3>Shoes.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
+      <p>Our shoes are designed with comfort as a priority while also managing to be stylish.</p>
       <a href="shoes.html" style="color: black;">Explore</a>
     </div>
   </section>
@@ -62,7 +62,7 @@
     <img src="merch image/T-shirts_trion_merch.png" class="merch-image">
     <div class="merch-description">
       <h3>T-shirts.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
+      <p>Affordable Trion apparel. Colorful options; there's a T-shirt for everyone!</p>
       <a href="shirts.html" style="color: black;">Explore</a>
     </div>
   </section>
@@ -71,7 +71,7 @@
     <img src="merch image/Hats_trion_merch.png" class="merch-image">
     <div class="merch-description">
       <h3>Hats.</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
+      <p>Our one-size-fits-all baseball caps are made with a smooth material for comfort, and are perfect to wear any time of year, especially when it's hot.</p>
       <a href="hats.html" style="color: black;">Explore</a>
     </div>
   </section>
