nemesis colors now have nav bars

--- a/interior-nemesis.html
+++ b/interior-nemesis.html
@@ -9,8 +9,10 @@
 <header>
   <nav role="navigation">
     <ul>
-      <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-      <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+      <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55"
+            alt="aeradsf"></a></li>
+      <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="60"
+            alt="r"></a>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="models.html">Models</a></li>
@@ -26,7 +28,7 @@
 </header>
 <body>
     <article class="config_option-controller">
-        <img class="image_config_controller" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" width="100%" alt="config">
+        <img class="image_config_controller" width="1700" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" alt="config">
         <div class="config_options_widow">
             <a href="interior-nemesis.html">ORIGINAL</a>
             <a href="interior-nemesis2.html">RED VARIANT</a>
