--- a/nemesis_color-hotpink.html
+++ b/nemesis_color-hotpink.html
@@ -6,6 +6,26 @@
     <link rel="stylesheet" href="flex.css">
     <title>nemesis_paintjob_hotpink</title>
 </head>
+<header>
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55"
+              alt="aeradsf"></a></li>
+        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="60"
+              alt="r"></a>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="models.html">Models</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="merch.html">Merch</a></li>
+            <li><a href="account_home.html">Account</a></li>
+            <li><a href="models-configurator.html">Configurator</a></li>
+            <li><a href="shopping_cart.html">Shopping Cart</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header>
 <body class="background_for_config">
     <article class="next_prev-controller">
         <a href="nemesis_color-green.html">GREEN</a>
