--- a/nem_tint_yellow.html
+++ b/nem_tint_yellow.html
@@ -10,7 +10,10 @@
   <header>
     <nav role="navigation">
       <ul>
-        <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>        <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+       <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55"
+              alt="aeradsf"></a></li>
+        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="60"
+              alt="r"></a>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="models.html">Models</a></li>
@@ -23,7 +26,10 @@
         </li>
       </ul>
     </nav>
-  </header>
+  </header>home_button" width="55"
+              alt="aeradsf"></a></li>
+        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="60"
+              alt="r"></a>
     <article class="config_option-controller">
         <img class="hubcap-image-flexstart" src="/trion_homepage_images/config_window-tint_yellow.jpg" width="80%" alt="config">
         <div class="config_options-special2">
