slight problem: the code doesn't adapt to the website

--- a/black-widow_design_original.html
+++ b/black-widow_design_original.html
@@ -29,7 +29,7 @@
         </nav>
       </header>
         <article  class="config_option-controller">
-            <img src="/trion_homepage_images/racing_blk-widow.avif" width="100%" alt="config">
+            <img src="/trion_homepage_images/racing_blk-widow.avif" alt="config">
             <div class="config_options-special">
                 <a href="black-widow_design_original.html">ORIGINAL</a>
                 <a href="black-widow_design_streetkit.html">STREET KIT</a>        
