--- a/black-widow_design_streetkit.html
+++ b/black-widow_design_streetkit.html
@@ -26,7 +26,7 @@
         </nav>
       </header>
         <article  class="config_option-controller">
-            <img src="/trion_homepage_images/black-widow_design_streetkit.jpg" width="100%" alt="config">
+            <img src="/trion_homepage_images/black-widow_design_streetkit.jpg" alt="config">
             <div class="config_options-special">
                 <a href="black-widow_design_original.html">ORIGINAL</a>
                 <a href="black-widow_design_streetkit.html">STREET KIT</a>        
