text issue fixed slightly, but origin of problem not found

--- a/about-us.html
+++ b/about-us.html
@@ -28,6 +28,11 @@
     </nav>
   </header>
   
+  <style>
+    article{
+      font-size: xx-large;
+    }
+  </style>
     <article>
     <section>
     
