--- a/order_confirmed.html
+++ b/order_confirmed.html
@@ -25,10 +25,7 @@
         </li>
       </ul>
     </nav>
-  </header>home_button" width="55"
-              alt="aeradsf"></a></li>
-        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
-              alt="r"></a>
+  </header>
 
     <footer>
         <section class="footer-title">
