--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -26,10 +26,7 @@
         </li>
       </ul>
     </nav>
-  </header>home_button" width="55"
-              alt="aeradsf"></a></li>
-        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
-              alt="r"></a>
+  </header>
 
     <div class="shopping-Shopping Cart">
       <!-- Title -->
