--- a/interior-nemesis.html
+++ b/interior-nemesis.html
@@ -28,7 +28,7 @@
 </header>
 <body>
     <article class="config_option-controller">
-        <img class="image_config_controller" width="1700" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" alt="config">
+        <img class="image_config_controller" class="hubcap-image" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" alt="config">
         <div class="config_options_widow">
             <a href="interior-nemesis.html">ORIGINAL</a>
             <a href="interior-nemesis2.html">RED VARIANT</a>
