--- a/nem_hubcap4.html
+++ b/nem_hubcap4.html
@@ -26,10 +26,7 @@
         </li>
       </ul>
     </nav>
-  </header>home_button" width="55"
-              alt="aeradsf"></a></li>
-        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
-              alt="r"></a>
+  </header>
     <article class="config_option-controller">
       <img class="hubcap-image" class="hubcap-image-flexstart" src="/trion_homepage_images/nemesis_hubcap4.jpg" alt="config">
         <div class="config_options">
