--- a/nem_tint_purple.html
+++ b/nem_tint_purple.html
@@ -26,10 +26,7 @@
         </li>
       </ul>
     </nav>
-  </header>home_button" width="55"
-              alt="aeradsf"></a></li>
-        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
-              alt="r"></a>
+  </header>
     <article class="config_option-controller">
         <img class="hubcap-image-flexstart" src="/trion_homepage_images/config_window-tint_purple.jpg" width="80%" alt="config">
         <div class="config_options-special2">
