responsive layout: nem interior

--- a/account_config_history.html
+++ b/account_config_history.html
@@ -31,7 +31,7 @@
   <!-- Account Page Content -->
   <article class="text-container-config-history">
     <h1>You do not have any saved configurations.</h1>
-    <a href="config-nemesis.html">OK</a>
+    <a href="models-configurator.html">OK</a>
   </article>
 
   <!-- Footer Section -->
