--- a/black-widow_design_original.html
+++ b/black-widow_design_original.html
@@ -13,7 +13,7 @@
           <ul>
             <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
                   alt="aeradsf"></a></li>
-            <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
+            <li class="dropdown"><a href=""><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
                   alt="r"></a>
               <ul>
                 <li><a href="index.html">Home</a></li>
