--- a/black-widow_tint2.html
+++ b/black-widow_tint2.html
@@ -11,7 +11,10 @@
       <header>
         <nav role="navigation">
           <ul>
-            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100" alt="aeradsf"></a></li>            <li class="dropdown"><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="60" alt="aeradsf"></a>
+            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
+                  alt="aeradsf"></a></li>
+            <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
+                  alt="r"></a>
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="models.html">Models</a></li>
