final commit for now (Hopefully the website is complete now)

--- a/account_home.html
+++ b/account_home.html
@@ -52,7 +52,7 @@
       <h2>Account Management</h2>
       <a href="models-configurator.html" class="cta-button">Go to Configurator</a>
       <a href="account_config_history.html" class="cta-button">View Saved Configurations</a>
-      <a href="edit-account.html" class="cta-button">Edit Account Settings</a>
+      <a href="account-settings.html" class="cta-button">Edit Account Settings</a>
     </div>
   </section>
 
