--- a/black-widow_spoiler2.html
+++ b/black-widow_spoiler2.html
@@ -11,7 +11,10 @@
       <header>
         <nav role="navigation">
           <ul>
-            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100" alt="aeradsf"></a></li>            <li class="dropdown"><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="60" alt="aeradsf"></a>
+            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
+              alt="aeradsf"></a></li>
+        <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
+              alt="r"></a>
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="models.html">Models</a></li>
@@ -26,11 +29,11 @@
         </nav>
       </header>
         <article  class="config_option-controller">
-            <img class="image-container_hubcap" src="/trion_homepage_images/black-widow_spoiler2.jpg" width="80%" alt="config">
-            <div class="config_options-new">
-                <a href="black-widow_spoiler1.html">OPTION 1</a>
-                <a href="black-widow_spoiler2.html">OPTION 2</a>        
-                <a href="black-widow_spoiler3.html">OPTION 3</a>
+            <img class="hubcap-image" src="/trion_homepage_images/black-widow_spoiler2.jpg" width="80%" alt="config">
+            <div class="config_options-spoiler">
+                <a href="black-widow_spoiler1.html">OPTION1</a>
+                <a href="black-widow_spoiler2.html">OPTION2</a>        
+                <a href="black-widow_spoiler3.html">OPTION3</a>
                 <a id="config-options_confirm-option" href="/change-apply-confirmation-black-widow.html">Confirm selection</a>   
             </div>
             
