pre-release tweaks #1 - phone number/removed nemesis color config

--- a/account-settings.html
+++ b/account-settings.html
@@ -43,7 +43,7 @@
         </div>
         <div>
           <div class="non-active-form">
-            <p class="capitalize">#(123)456-7890</p><i class="fas fa-pen"></i>
+            <p class="capitalize">#123-456-7890</p><i class="fas fa-pen"></i>
           </div>
         </div>
         <div>
@@ -319,7 +319,7 @@ body{
           <p>CONTACT</p>
           <p>INSERT EMAIL HERE:</p>
           <p>________________________</p>
-          <p>Call us: #(123)456-7890</p>
+          <p>Call us: #123-456-7890</p>
         </section>
          <section class="footer_buttons">     
           <a href="models.html">MODELS</a>
