--- a/config-nemesis.html
+++ b/config-nemesis.html
@@ -32,7 +32,6 @@
             <img class="image_config_controller" src="trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.jpg" alt="nemesis image for configurator page">
         </div>
         <div class="config_options">
-            <a href="nemesis_color-orange.html">PAINT JOB</a>
             <a href="nem_hubcap1.html">HUBCAPS</a>
             <a href="nem_hubcap-polished.html">LOGO DESIGNS</a>        
             <a href="nem_tint_original.html">WINDOW TINT</a>
@@ -50,7 +49,7 @@
           <p>CONTACT</p>
           <p>INSERT EMAIL HERE:</p>
           <p>________________________</p>
-          <p>Call us: #(123)456-7890</p>
+          <p>Call us: #123-456-7890</p>
         </section>
          <section class="footer_buttons">     
           <a href="models.html">MODELS</a>
