--- a/nem_headlight-caliper3.html
+++ b/nem_headlight-caliper3.html
@@ -48,7 +48,7 @@
           <p>CONTACT</p>
           <p>INSERT EMAIL HERE:</p>
           <p>________________________</p>
-          <p>Call us: #(123)456-7890</p>
+          <p>Call us: #123-456-7890</p>
         </section>
          <section class="footer_buttons">     
           <a href="models.html">MODELS</a>
