deleted and rewrite some code

--- a/shirts.html
+++ b/shirts.html
@@ -41,26 +41,29 @@
 <body>
     <header>
         <nav role="navigation">
-          <ul>
-            <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100" alt="aeradsf"></a></li>            <li class="dropdown"><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="60" alt="aeradsf"></a>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="models.html">Models</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="merch.html">Merch</a></li>
-                <li><a href="account_home.html">Account</a></li>
-                <li><a href="models-configurator.html">Configurator</a></li>
-                <li><a href="shopping_cart.html">Shopping Cart</a></li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
+            <ul>
+              <li><li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="100"
+                    alt="aeradsf"></a></li>
+              <li class="dropdown"><a href="#"><img src="/trion_homepage_images/menu.png" class="hamburger" width="90"
+                    alt="r"></a>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="models.html">Models</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="merch.html">Merch</a></li>
+                  <li><a href="account_home.html">Account</a></li>
+                  <li><a href="models-configurator.html">Configurator</a></li>
+                  <li><a href="shopping_cart.html">Shopping Cart</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
       </header>
 
-    <section id="merch-header">
-        <h1 style="color: white;">Merch</h1>
-        <img src="merch image/shopping_Shopping Cart-removebg-preview.png" width="45rem">
-    </section>
+      <section id="merch-header">
+        <h1>Merch</h1>
+        <a href="/shopping_cart.html"><img src="merch image/shopping_Cart-removebg-preview.png" width="45rem" alt="shopping_cart"></a>
+      </section>
 
     <section>
         <img src="merch image/Shirts-hero-image.png" id="shirt-hero">
@@ -68,31 +71,26 @@
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <div>
-                <a href="shopping_Shopping Cart.html">
                 <a href="customize.html">
                 <img src="merch image/T-shirts_trion_merch - Copy.png">
                 </a>
-            </div>
-            <div>
+
                 <img src="merch image/white shirt.png">
-            </div>
-            <div>
-                <img src="merch image/blue shirt.png">
-            </div> 
+
+                <img src="merch image/blue shirt.png"> 
         </article>
     </section>
 
-    <section>
-        <article>
+    <section class="shirt-row">
+        <article class="shirt-container">
             <img src="merch image/grey shirt.png">
             <img src="merch image/Orange_Nemesis.png">
             <img src="merch image/black shirt.png">
         </article>
     </section>
 
-    <section>
-        <article>
+    <section class="shirt-row">
+        <article class="shirt-container">
             <img src="merch image/big logo black shirt.png">
             <img src="merch image/big logo grey shirt.png">
             <img src="merch image/big logo white shirt.png">
