--- a/hats.html
+++ b/hats.html
@@ -61,7 +61,7 @@
   </header>
 
     <section>
-        <img src="merch image/Shirts-hero-image.png" id="shirt-hero">
+        <img src="trion_homepage_images/hoodies.jpg" id="shirt-hero">
     </section>
 
     <section class="shirt-row">
