--- a/hoodies.html
+++ b/hoodies.html
@@ -61,30 +61,30 @@
   </header>
 
     <section>
-        <img src="merch image/Shirts-hero-image.png" id="shirt-hero">
+        <img src="trion_homepage_images/hoodies.jpg" id="shirt-hero">
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/Hoodies_trion_merch.png" width="250px">
-            <img src="merch image/red trion hoodies.png" width="20%">
-            <img src="merch image/blue trion hoodies.png">
+            <img src="merch image/Hoodies_trion_merch.png" width="25%">
+            <img src="merch image/red trion hoodies.png" width="25%">
+            <img src="merch image/blue trion hoodies.png" width="25%">
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/brown trion hoodies.png">
-            <img src="merch image/green trion hoodies.png">
-            <img src="merch image/white trion hoodies.png">
+            <img src="merch image/brown trion hoodies.png" width="25%">
+            <img src="merch image/green trion hoodies.png" width="25%">
+            <img src="merch image/white trion hoodies.png" width="25%">
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/orange trion hoodies.png">
-            <img src="merch image/purple trion hoodies.png">
-            <img src="merch image/yellow trion hoodies.png">
+            <img src="merch image/orange trion hoodies.png" width="25%">
+            <img src="merch image/purple trion hoodies.png" width="25%">
+            <img src="merch image/yellow trion hoodies.png" width="25%">
         </article>
     </section>
     
