--- a/hats.html
+++ b/hats.html
@@ -66,25 +66,25 @@
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/Hats_trion_merch.png">
-            <img src="merch image/blue trion hat.png">
-            <img src="merch image/grey trion hat.png">
+            <img src="merch image/Hats_trion_merch.png" width="20%">
+            <img src="merch image/blue trion hat.png" width="20%">
+            <img src="merch image/grey trion hat.png" width="20%">
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/brown trion hat.png">
-            <img src="merch image/green trion hat.png">
-            <img src="merch image/white trion hat.png">
+            <img src="merch image/brown trion hat.png" width="20%">
+            <img src="merch image/green trion hat.png" width="20%">
+            <img src="merch image/white trion hat.png" width="20%">
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/orange trion hat.png">
-            <img src="merch image/purple trion hat.png">
-            <img src="merch image/yellow trion hat.png">
+            <img src="merch image/orange trion hat.png" width="20%">
+            <img src="merch image/purple trion hat.png" width="20%">
+            <img src="merch image/yellow trion hat.png" width="20%">
         </article>
     </section>
     
