--- a/hats.html
+++ b/hats.html
@@ -59,9 +59,12 @@
       </ul>
     </nav>
   </header>
+  <section id="merch-header">
+    <a href="/shopping_cart.html"><img src="merch image/shopping_Cart-removebg-preview.png" width="45rem" alt="shopping_cart"></a>
+  </section>
 
     <section>
-        <img src="trion_homepage_images/hoodies.jpg" id="shirt-hero">
+        <img src="merch image/hats_hompage_image.jpg" id="shirt-hero">
     </section>
 
     <section class="shirt-row">
