--- a/shirts.html
+++ b/shirts.html
@@ -74,26 +74,40 @@
                 <a href="customize.html">
                 <img src="merch image/T-shirts_trion_merch - Copy.png">
                 </a>
-
+                <a href="shirt.html">
                 <img src="merch image/white shirt.png">
-
+                </a>
+                <a href="shirt.html">
                 <img src="merch image/blue shirt.png"> 
+                </a>
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
+            <a href="shirt.html">
             <img src="merch image/grey shirt.png">
+            </a>
+            <a href="shirt.html">
             <img src="merch image/Orange_Nemesis.png">
+            </a>
+            <a href="shirt.html">
             <img src="merch image/black shirt.png">
+            </a>
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
+            <a href="shirt.html">
             <img src="merch image/big logo black shirt.png">
+            </a>
+            <a href="shirt.html">
             <img src="merch image/big logo grey shirt.png">
+            </a>
+            <a href="shirt.html">
             <img src="merch image/big logo white shirt.png">
+            </a>
         </article>
     </section>
 
