update so we won't mess up

--- a/shirts.html
+++ b/shirts.html
@@ -74,10 +74,10 @@
                 <a href="customize.html">
                 <img src="merch image/T-shirts_trion_merch - Copy.png">
                 </a>
-                <a href="shirt.html">
+                <a href="shirt2.html">
                 <img src="merch image/white shirt.png">
                 </a>
-                <a href="shirt.html">
+                <a href="shirt3.html">
                 <img src="merch image/blue shirt.png"> 
                 </a>
         </article>
@@ -85,13 +85,13 @@
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <a href="shirt.html">
+            <a href="shirt4.html">
             <img src="merch image/grey shirt.png">
             </a>
-            <a href="shirt.html">
+            <a href="shirt5.html">
             <img src="merch image/Orange_Nemesis.png">
             </a>
-            <a href="shirt.html">
+            <a href="shirt6.html">
             <img src="merch image/black shirt.png">
             </a>
         </article>
@@ -99,13 +99,13 @@
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <a href="shirt.html">
+            <a href="shirt7.html">
             <img src="merch image/big logo black shirt.png">
             </a>
-            <a href="shirt.html">
+            <a href="shirt8.html">
             <img src="merch image/big logo grey shirt.png">
             </a>
-            <a href="shirt.html">
+            <a href="shirt9.html">
             <img src="merch image/big logo white shirt.png">
             </a>
         </article>
