--- a/shoes.html
+++ b/shoes.html
@@ -65,30 +65,30 @@
   </section>
 
     <section>
-      <img src="merch image/Shirts-hero-image.png" id="shirt-hero">
+      <img src="merch image/shoes_homepage.jpg" id="shirt-hero">
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/Shoes_trion_merch.png" width="20%">
-            <img src="merch image/red trion shoes.jpg" >
-            <img src="merch image/blue trion shoes.png">
+            <img src="merch image/Shoes_trion_merch.png" width="15%">
+            <img src="merch image/red trion shoes.jpg"  width="15%">
+            <img src="merch image/blue trion shoes.png" width="15%">
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/cyan trion shoes.jpg">
-            <img src="merch image/brown trion shoes.jpg">
-            <img src="merch image/green trion shoes.jpg">
+            <img src="merch image/cyan trion shoes.jpg" width="15%">
+            <img src="merch image/brown trion shoes.jpg" width="15%">
+            <img src="merch image/green trion shoes.jpg" width="15%">
         </article>
     </section>
 
     <section class="shirt-row">
         <article class="shirt-container">
-            <img src="merch image/white trion shoes.png">
-            <img src="merch image/orange trion shoes.jpg">
-            <img src="merch image/purple trion shoes.jpg">
+            <img src="merch image/white trion shoes.png" width="15%">
+            <img src="merch image/orange trion shoes.jpg" width="15%">
+            <img src="merch image/purple trion shoes.jpg" width="15%">
         </article>
     </section>
 
